plugins {
  id 'application'
  id 'com.palantir.docker' version '0.31.0'
}

mainClassName = 'kvd.server.Kvd'

docker {
  name project.name
  tags 'latest'
  dockerfile file('Dockerfile')
  files tasks.installDist.outputs
}

dependencies {
  implementation project(':kvd-client')
  implementation 'org.apache.commons:commons-lang3:3.12.0'
  implementation 'commons-io:commons-io:2.11.0'
  implementation 'com.google.guava:guava:31.0.1-jre'
  implementation 'com.beust:jcommander:1.81'
  implementation 'ch.qos.logback:logback-classic:1.2.9'
  implementation 'org.jgrapht:jgrapht-core:1.5.1'
  implementation 'org.mapdb:mapdb:3.0.8'
  testImplementation 'com.google.code.gson:gson:2.8.9'
}

compileJava {
  sourceCompatibility = '11'
  targetCompatibility = '11'
}
